<resources>
    <string name="app_name">AndroidStudy</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="StartOtherActivity">显示启动另一个Activity</string>
    <string name="StartOtherActivity2">隐式启动另一个Activity</string>
    <string name="secondActivity">第二个Acitivy</string>
    <string name="back">返回</string>
    <string name="StartOtherActivity3">获取返回值的启动方式</string>
    <string name="logout">退出</string>
    <string name="progress">进度对话框</string>
    <string name="list">启动列表Activity</string>
    <string name="girl">美女</string>
    <string name="list2">启动列表Activity2</string>
    <string name="popMenu">弹出菜单</string>
    <string name="popWindow">弹出窗口</string>
    <string name="fragment_example">Fragment例子</string>
    <string name="switchFragment">切换Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_one">第一个Fragment</string>
    <string name="fragment_two">第二个Fragment</string>
    <string name="filePersistence">文件持久化</string>
    <string name="save">保存到文件</string>
    <string name="saveTosp">保存到sharedPreferences</string>
    <string name="readFromsp">从SharedPreferences读取</string>
    <string name="sendNotify">发送通知</string>
    <string name="index">首页</string>
    <string name="animation">动画</string>
    <string name="alpha">透明</string>
    <string name="scale">缩放</string>
    <string name="rotate">旋转</string>
    <string name="translate">位移</string>
    <string name="animationset">集合</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
