<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.study.sgl.androidstudy.SecondActivity">
    <TextView
        android:id="@+id/content"
        android:text="@string/secondActivity"
        android:textSize="@dimen/content_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/back"
        android:textSize="@dimen/content_size"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"/>
    <Button
        android:id="@+id/logout"
        android:textSize="@dimen/content_size"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:background="@color/green"/>
    <Button
        android:id="@+id/progress"
        android:textSize="@dimen/content_size"
        android:text="@string/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:background="@color/green"/>


</RelativeLayout>
