<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.study.sgl.androidstudy.PopupWindowActivity">

    <Button
        android:id="@+id/startOtherActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartOtherActivity"/>
    <Button
        android:id="@+id/startOtherActivity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartOtherActivity2"
        android:layout_below="@id/startOtherActivity"
        android:layout_marginTop="@dimen/button_vertical_margin"/>
    <Button
        android:id="@+id/startOtherActivity3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartOtherActivity3"
        android:layout_below="@id/startOtherActivity2"
        android:layout_marginTop="@dimen/button_vertical_margin"/>
</RelativeLayout>
