<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.study.sgl.androidstudy.AnimationActivity">

    <ImageView
        android:id="@+id/image"
        android:src="@mipmap/ic_launcher"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/viewanimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_weight="1"
        android:id="@+id/alpha"
        android:text="@string/alpha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_weight="1"
        android:id="@+id/scale"
        android:text="@string/scale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_weight="1"
        android:id="@+id/rotate"
        android:text="@string/rotate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_weight="1"
        android:id="@+id/translate"
        android:text="@string/translate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_weight="1"
        android:id="@+id/animationset"
        android:text="@string/animationset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/viewanimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/propertyalpha"
            android:text="@string/alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/propertyscale"
            android:text="@string/scale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/propertyrotate"
            android:text="@string/rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/propertytranslate"
            android:text="@string/translate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/propertyanimationset"
            android:text="@string/animationset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>
